-Refactored maps for mob health and damage overrides to use map of