@@ -1,36 +1,37 @@
 package net.alek.succorstadiums;
 
-import net.minecraft.resources.Identifier;
-import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.EntityTypes;
+import net.minecraft.world.entity.EntityType;
+import net.minecraft.resources.Identifier;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
+// SuccorStadiumsConstants class
 public class SuccorStadiumsConstants {
 
+    // Initialize maps for mob health and mob damages overrides
     public static final Map<EntityType<?>, Double> MOB_HEALTH_OVERRIDES;
     public static final Map<EntityType<?>, Double> MOB_DAMAGE_OVERRIDES;
 
+    // Initialize double for player health and first range modifier
     public static final double PLAYER_MAX_HEALTH = 10.0;
-
     public static final double PLAYER_FIST_RANGE_MODIFIER = -0.6;
+
+    // Initialize a identifier namespace id for player fist range
     public static final Identifier PLAYER_FIST_RANGE_ID = Identifier.withDefaultNamespace("player_fist_range");
 
+    // Static initialize block for the two maps
     static {
-        Map<EntityType<?>, Double> healthMap = new HashMap<>();
-        healthMap.put(EntityTypes.SKELETON, 10.0);
-        healthMap.put(EntityTypes.CREEPER, 8.0);
-        healthMap.put(EntityTypes.ZOMBIE, 14.0);
-        healthMap.put(EntityTypes.ZOMBIE_VILLAGER, 25.5);
-        MOB_HEALTH_OVERRIDES = Collections.unmodifiableMap(healthMap);
+        MOB_HEALTH_OVERRIDES = Map.of(
+                EntityTypes.SKELETON, 10.0,
+                EntityTypes.CREEPER, 8.0,
+                EntityTypes.ZOMBIE, 14.0,
+                EntityTypes.ZOMBIE_VILLAGER, 25.5);
 
-        Map<EntityType<?>, Double> damageMap = new HashMap<>();
-        damageMap.put(EntityTypes.ZOMBIE, 2.0);
-        damageMap.put(EntityTypes.ZOMBIE_VILLAGER, 2.0);
-        damageMap.put(EntityTypes.SPIDER, 0.5);
-        damageMap.put(EntityTypes.SKELETON, 0.5);
-        MOB_DAMAGE_OVERRIDES = Collections.unmodifiableMap(damageMap);
+        MOB_DAMAGE_OVERRIDES = Map.of(
+                EntityTypes.ZOMBIE, 2.0,
+                EntityTypes.ZOMBIE_VILLAGER, 2.0,
+                EntityTypes.SPIDER, 0.5,
+                EntityTypes.SKELETON, 0.5);
     }
 }
